--- a/index.html
+++ b/index.html
@@ -16,18 +16,17 @@
     <div class="container">
       <div class="one">
         <h1 class="one">
-          Hey
+          Hế nhô
           <span id="name">xyz</span>
         </h1>
-        <p class="two" id="greetingText">I really like your name btw!</p>
       </div>
       <div class="three">
-        <p>It's Valentine!!! :D</p>
+        <p>It's Valentine Day!!! :D</p>
       </div>
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Happy Valentine's Day!! Yeee! Love and blah blah...
+            Happy Valentine's Day!! anh yêu em nhèo and blah blah...
           </p>
           <p class="fake-btn">Send</p>
         </div>
@@ -124,8 +123,9 @@
         </svg>
       </div>
       <div class="nine">
-        <p>Okay, now come back and tell me if you liked it.</p>
-        <p id="replay">Or click, if you want to watch it again.</p>
+        <p>Nếu em thích thì hun a mụt cái, không thích thì cũm hun mụt cái.</p>
+        <p>Còn hong thì scan để nhận quà hehe</p>
+        <p id="replay">Hoặc là click để replay cũm được ó</p>
         <p class="last-smile">:)</p>
       </div>
     </div>
