--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       <div class="one">
         <h1 class="one">
           Hế nhô
-          <span id="name">xyz</span>
+          <span id="name">pé iu</span>
         </h1>
       </div>
       <div class="three">
-        <p>It's Valentine Day!!! :D</p>
+        <p>First, it's Valentine babyyyy!!!</p>
       </div>
       <div class="four">
         <div class="text-box">
@@ -49,9 +49,11 @@
       </div>
       <div class="six">
         <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
+        <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
+        <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
+        <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Happy Valentine's Day Gorgeous</h3>
-          <h5 id="wishText">kuch kuch</h5>
+          <h3 class="wish-hbd">Our journey through time</h3>
         </div>
       </div>
       <div class="seven">
@@ -125,6 +127,7 @@
       <div class="nine">
         <p>Nếu em thích thì hun a mụt cái, không thích thì cũm hun mụt cái.</p>
         <p>Còn hong thì scan để nhận quà hehe</p>
+        <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
         <p id="replay">Hoặc là click để replay cũm được ó</p>
         <p class="last-smile">:)</p>
       </div>
