--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
         </p>
       </div>
       <div class="six">
-        <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
-        <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
-        <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
-        <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
+        <img src="img/vector1.jpg" alt="" class = "girl-dp" id="imagePath" />
+        <img src="img/vector2.jpg" alt="" class = "girl-dp" id="imagePath" />
+        <img src="img/vector3.jpg" alt="" class = "girl-dp" id="imagePath" />
+        <img src="img/vector4.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Our journey through time</h3>
+          <h3>Our recent trip</h3>
+          <h3>Looking forward many more!</h3>
         </div>
       </div>
       <div class="seven">
@@ -127,7 +128,7 @@
       <div class="nine">
         <p>Nếu em thích thì hun a mụt cái, không thích thì cũm hun mụt cái.</p>
         <p>Còn hong thì scan để nhận quà hehe</p>
-        <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
+        <img src="img/vector1.jpg" alt=""id="imagePath" />
         <p id="replay">Hoặc là click để replay cũm được ó</p>
         <p class="last-smile">:)</p>
       </div>
