--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <img src="img/vector3.jpg" alt="" class = "girl-dp"/>
         <img src="img/vector4.jpg" alt="" class = "girl-dp"/>
         <div class="wish">
-          <h3>Our recent trip</h3>
+          <h3 class="wish-hbd">Our recent trip</h3>
           <h3>Looking forward many more!</h3>
         </div>
       </div>
