--- a/index.html
+++ b/index.html
@@ -32,15 +32,14 @@
         </div>
       </div>
       <div class="five">
-        <p class="idea-1">That's what I was going to do.</p>
-        <p class="idea-2">But then I stopped.</p>
+        <p class="idea-1">Anh định nhắn zậy á</p>
+        <p class="idea-2">Nhưng gòi anh hong gửi</p>
         <p class="idea-3">
-          I realised, I wanted to do something <strong>special</strong>.
+          Bởi zì, làm như zậy nè <strong>vui hơn nhìu</strong>.
         </p>
-        <p class="idea-4">Because,</p>
+        <p class="idea-4">Nhưng đối với anh</p>
         <p class="idea-5">
-          You are Special
-          <span>:)</span>
+          You are my everyday Valentine
         </p>
         <p class="idea-6">
           <span>S</span>
@@ -50,8 +49,6 @@
       <div class="six">
         <img src="img/vector1.jpg" alt="" class = "girl-dp"/>
         <img src="img/vector2.jpg" alt="" class = "girl-dp"/>
-        <img src="img/vector3.jpg" alt="" class = "girl-dp"/>
-        <img src="img/vector4.jpg" alt="" class = "girl-dp"/>
         <div class="wish">
           <h3 class="wish-hbd">Our recent trip</h3>
           <h3>Looking forward many more!</h3>
@@ -127,7 +124,7 @@
       </div>
       <div class="nine">
         <p>Nếu em thích thì hun a mụt cái, không thích thì cũm hun mụt cái.</p>
-        <p>Còn hong thì scan để nhận quà hehe</p>
+        <p>Và để nhận quà thì hãy nhắn "Em iu anh"</p>
         <p id="replay">Hoặc là click để replay cũm được ó</p>
         <p class="last-smile">:)</p>
       </div>
