--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <p class="idea-3">
           Bởi zì, làm như zậy nè <strong>vui hơn nhìu</strong>.
         </p>
-        <p class="idea-4">Nhưng đối với anh</p>
+        <p class="idea-4">Nhưng đối với anh thì..</p>
         <p class="idea-5">
-          You are my everyday Valentine
+          Yêu nhau thì ngày nào cũm là valentine thuiii
         </p>
         <p class="idea-6">
           <span>S</span>
@@ -51,7 +51,7 @@
         <img src="img/vector2.jpg" alt="" class = "girl-dp"/>
         <div class="wish">
           <h3 class="wish-hbd">Our recent trip</h3>
-          <h3>Looking forward many more!</h3>
+          <h3 class="wish-hbd">Looking forward many more!</h3>
         </div>
       </div>
       <div class="seven">
