--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
         <img src="img/vector1.jpg" alt="" class = "girl-dp"/>
         <img src="img/vector2.jpg" alt="" class = "girl-dp"/>
         <div class="wish">
-          <h3 class="wish-hbd">Our recent trip</h3>
-          <h3 class="wish-hbd">Looking forward many more!</h3>
+          <h3 class="wish-hbd">Let's just looking to many other years together</h3>
         </div>
       </div>
       <div class="seven">
